# seed

./: .gitignore  DOCKER.md  Makefile  README.md  docker-compose-services.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
infra/app/: load-balancer.tf  main.tf  service-api.tf  service-web.tf
infra/app/task-definitions/: api.json  web.json
infra/services/: asset-s3.tf  event-bridge.tf  job-queue.tf  main.tf  network.tf  variables.tf
infra/services/modules/cloudfront/: cloudfront.tf  variables.tf
infra/services/modules/database/: db.tf
infra/shared/: main.tf
services/api/: Dockerfile  README.md  make.sh  pyproject.toml  pyrightconfig.json
services/api/api/: main.py
services/api/tests/: test_api.py
services/web/: Dockerfile  README.md  entrypoint.sh  make.sh  manage.py  pyproject.toml  pyrightconfig.json
services/web/templates/: health.html  home.html  result.html
services/web/webapp/: settings.py  urls.py  views.py  wsgi.py
services/worker/: Dockerfile  README.md  env.sample  make.sh  pyproject.toml  pyrightconfig.json
services/worker/worker/: main.py
