[project]
name = "web-service"
version = "0.1.0"
description = "Django frontend that calls the FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Django>=5.0",
  "httpx",
  "python-dotenv",
  "boto3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webapp"]
